[gd_scene load_steps=13 format=2]

[ext_resource path="res://gfx/mouse.png" type="Texture" id=1]
[ext_resource path="res://Mouse.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 17 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 2 ), SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.63158
height = 3.87109

[sub_resource type="CapsuleShape2D" id=9]
radius = 4.36723
height = 5.87337

[sub_resource type="CapsuleShape2D" id=10]
height = 143.614

[node name="Mouse" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "move"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.63478, 3.44783 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="hurbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.41218, 4.229 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
rotation = 1.5708
shape = SubResource( 10 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
